Refactor folder structure

--- a/src/components/Body/Sketch/styles.scss
+++ b/src/components/Body/Sketch/styles.scss
@@ -66,6 +66,8 @@
   border-right: 2px solid red;
 }
 
-.sketch-shape-selected {
-
+.sketch-shape--selected {
+  stroke-width: 2;
+  stroke: blue;
+  fill: url(#dots-pattern);
 }
