--- a/src/components/Body/MarkupViewer/styles.scss
+++ b/src/components/Body/MarkupViewer/styles.scss
@@ -11,10 +11,17 @@
   color: rgba(255,255,255,0.8);
   background: rgba(255,100,255,0.2);
   border-radius: 5px;
-  border: 2px solid transparent;
-  margin: 5px;
+  margin: 10px;
+  font-size: 16px;
+  font-weight: 500;
 }
 
 .markup-element--selected {
-  border: 2px solid blue !important;
+  background: blue !important;
+}
+
+.changable {
+    border: 1px solid rgba(255,255,255,0.2);
+    padding: 2px;
+    border-radius: 4px;
 }
